--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "deqvaufcv",
+    "ApiKey": "217512935591936",
+    "ApiSecret": "d5SsPsDBArT6seWEdFz02QhP7pg"
+  }
 }
