--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "super secret key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=datingApp; Uid=appuser; Pwd=7604129208"
+    "DefaultConnection": "Server=tcp:da-sql-888.database.windows.net,1433;Initial Catalog=datingAppDb;Persist Security Info=False;User ID=appuser;Password=H7604129208!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
