remove some secret info from appsettings

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "super secret key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:da-sql-888.database.windows.net,1433;Initial Catalog=datingAppDb;Persist Security Info=False;User ID=appuser;Password=H7604129208!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
@@ -12,8 +12,8 @@
   },
   "AllowedHosts": "*",
   "CloudinarySettings": {
-    "CloudName": "deqvaufcv",
-    "ApiKey": "217512935591936",
-    "ApiSecret": "d5SsPsDBArT6seWEdFz02QhP7pg"
+    "CloudName": "",
+    "ApiKey": "",
+    "ApiSecret": ""
   }
 }
