--- a/DatingApp.API/appsettings.Development.json
+++ b/DatingApp.API/appsettings.Development.json
@@ -7,6 +7,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:da-sql-888.database.windows.net,1433;Initial Catalog=datingAppDb;Persist Security Info=False;User ID=appuser;Password=H7604129208!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": ""
   }
 }
