refactor to .net core Identity

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -3,7 +3,7 @@
     "Token": "super secret key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Data Source=DatingApp.db"
   },
   "Logging": {
     "LogLevel": {
@@ -12,8 +12,8 @@
   },
   "AllowedHosts": "*",
   "CloudinarySettings": {
-    "CloudName": "",
-    "ApiKey": "",
-    "ApiSecret": ""
+    "CloudName": "deqvaufcv",
+    "ApiKey": "217512935591936",
+    "ApiSecret": "d5SsPsDBArT6seWEdFz02QhP7pg"
   }
 }
